cmake_minimum_required(VERSION 3.14)
project(SelfMade/Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm test.cpp "Baekjoon-Algorithm/Dynamic Programming/[F]9095.h" "Baekjoon-Algorithm/Dynamic Programming/1003_Fibonacci.h" Baekjoon-Algorithm/Queue/[Unsolved]2905_paintPlane.h "Baekjoon-Algorithm/Greedy Algorithm/1931_MeetingRoom.h" Baekjoon-Algorithm/Math/1000.h Baekjoon-Algorithm/Math/1001.h Baekjoon-Algorithm/Math/1008.h Baekjoon-Algorithm/Sort/[F]1377_bubbleSort.h Baekjoon-Algorithm/Math/2997.h "Baekjoon-Algorithm/Dynamic Programming/2193.h" Algorithm-DS-Practice/Data-Structure/Graph/GraphByMatrix.h Algorithm-DS-Practice/Algorithms/Shortest-Path/Dijkstra.h)