cmake_minimum_required(VERSION 3.14)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorithm test.cpp "Baekjoon-Algorithm/Dynamic Programming/9095.h" "Baekjoon-Algorithm/Dynamic Programming/1003_Fibonacci.h" Baekjoon-Algorithm/Queue/2905_paintPlane.h "Baekjoon-Algorithm/Greedy Algorithm/1931_MeetingRoom.h" Baekjoon-Algorithm/Math/1000.h Baekjoon-Algorithm/Math/1001.h Baekjoon-Algorithm/Math/1008.h Baekjoon-Algorithm/Sort/1377_bubbleSort.h Baekjoon-Algorithm/Math/2997.h "Baekjoon-Algorithm/Dynamic Programming/2193.h" Algorithm-DS-Practice/Data-Structure/Graph/GraphByMatrix.h Algorithm-DS-Practice/Algorithms/Shortest-Path/Dijkstra.h "Baekjoon-Algorithm/Greedy Algorithm/11047_coin.h" Baekjoon-Algorithm/BFS/2178_maze.h Baekjoon-Algorithm/Math/10998.h Baekjoon-Algorithm/Dijkstra/1916.h "Baekjoon-Algorithm/Greedy Algorithm/10610_30.h" Baekjoon-Algorithm/Dijkstra/1753.h Baekjoon-Algorithm/Graph/4963_numberOfIsland.h "Baekjoon-Algorithm/Divide and Conquer/2630.h" "Baekjoon-Algorithm/Divide and Conquer/1992.h")